# mustaqeer

./: .gitignore  1.md  README.md  dev.db  pyproject.toml
alembic/: env.py
alembic/versions/: 0dfb7fa6d4ac_remove_unnecessary_members_column_from_.py  18fe033622fa_add_puplisher.py  1c73cdbcfc29_create_tables.py  2c8d8dad25b4_users_table_created_is_active_updated.py  3eefaa3011f5_access_and_refresstokens_are_edited.py  62fc66ef8d9e_remove_unnecessary_members_column_from_.py  784a62634b26_users_table_created.py  a9f9d4453cbd_user_table_edited.py  b4f5430f142d_episodes_table_created.py  dd7095807175_added_new_column_in_episods.py
app/: et.py  main.py
app/config/: database.py  dependencies.py  email.py  security.py  settings.py
app/data/: juz.json  script.py
app/models/: episodes.py  members.py  my_progress_model.py  test.py  users.py
app/responses/: base.py  episodes.py  myprogress_response.py  user.py
app/routes/: episodes.py  my_progress_route.py  test.py  users.py
app/schemas/: episodes.py  my_progress_request.py  test.py  users.py
app/services/: email.py  episodes.py  my_Progress_service.py  profile.py  user.py
app/templates/: account-verification-confirmation.html  password-reset.html
app/utils/: email_context.py  enum.py  episode.py  profile.py  update_progress_utils.py
